[package]
name = "rust_c02_signal"
version = "0.1.2"
edition = "2021"
authors = ["Threpio / Theo Andresier <https://github.com/Threpio>"]
description = "Rust implementation of the C02 Signal API - Very basic atm"
license = "MIT"
repository = "https://github.com/Threpio/rust_c02Signal"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
tokio = { version = "1.13.0", features = ["full"] }
reqwest = { version = "0.11.6", features = ["json"] }
time = "0.3.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_derive = "1.0.145"
